discussion/testrunner/24196/24196_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-100: testrunner doesn't handle SyntaxError

test passed

Traceback (most recent call last):
  File "./testrunner", line 315, in <module>
    suite = unittest.TestLoader().loadTestsFromName(name)
  File "/usr/lib64/python2.6/unittest.py", line 575, in loadTestsFromName
    module = __import__('.'.join(parts_copy))
  File "pytests/rebalance/rebalancein.py", line 349
    fragmentation_monitor.result()
                        ^
SyntaxError: invalid syntax
scripts/start_cluster_and_run_tests.sh: line 70:  4000 Terminated              COUCHBASE_NUM_VBUCKETS=64 MAX_COUCH_REPS_PER_DOC=64 XDCR_FAILURE_RESTART_INTERVAL=1 python ./cluster_run --nodes=$servers_count >&$wd/cluster_run.log  (wd: ~/jenkins/workspace/testrunner-gerrit-master/ns_server)
+ sudo killall -9 beam.smp epmd memcached python
memcached: no process killed
+ true
[testrunner-gerrit-master] $ /bin/sh -xe /tmp/hudson1253734917366543873.sh
Archiving artifacts
Notifying upstream projects of job completion
Finished: SUCCESS

Change-Id: Ib6c1a0d793512438ede1cc9df389e5ba0c731186

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Andrei Baranouski
Date: 2013-01-25 11:26:49.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2013-01-25 11:36:15.000000000
Message: 
Patch Set 2:

Build Started http://qa.hq.northscale.net/job/testrunner-gerrit-master/5138/ 
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2013-01-25 11:55:41.000000000
Message: 
Patch Set 2: Verified

Build Successful 

http://qa.hq.northscale.net/job/testrunner-gerrit-master/5138/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Iryna Mironava
Date: 2013-01-25 13:08:42.000000000
Message: 
Patch Set 2: Looks good to me, approved


----------------------------------------------------------------------------------------------------------------------
Author: Andrei Baranouski
Date: 2013-01-25 13:29:58.000000000
Message: 
Change has been successfully cherry-picked as 2cc3d205e2125e74b3bb1c4cfc43025b82ef1864
----------------------------------------------------------------------------------------------------------------------
